// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toc Editor PanelTocEditor sends a message to Webview when the content is updated 1`] = `
[
  {
    "state": {
      "editable": [
        {
          "absPath": "/fake/path",
          "language": "language",
          "licenseUrl": "licenseUrl",
          "slug": "slug",
          "title": "title",
          "tocTree": [
            {
              "children": [
                {
                  "absPath": "/fake/path/to/file",
                  "fileId": "fileId",
                  "subtitle": "fileId",
                  "title": "title",
                  "token": "token",
                  "type": "TocNodeKind.Page",
                },
              ],
              "title": "title",
              "token": "token",
              "type": "TocNodeKind.Subbook",
            },
          ],
          "type": "BookRootNode.Singleton",
          "uuid": "uuid",
        },
      ],
      "uneditable": [
        {
          "slug": "mock-slug__source-only",
          "title": "All Modules",
          "tocTree": [
            {
              "absPath": "/fake/path/to/file",
              "fileId": "fileId",
              "subtitle": "fileId",
              "title": "title",
              "token": "token",
              "type": "TocNodeKind.Page",
            },
          ],
        },
        {
          "slug": "mock-slug__source-only",
          "title": "Orphan Modules",
          "tocTree": [],
        },
      ],
    },
    "type": "PanelStateMessageType.Response",
  },
]
`;

exports[`Toc Editor TocTreesProvider returns expected TocTreeItems 1`] = `[]`;

exports[`Toc Editor TocTreesProvider returns expected TocTreeItems 2`] = `[]`;

exports[`Toc Editor TocTreesProvider returns expected TocTreeItems 3`] = `
TocTreeItem {
  "children": [
    TocTreeItem {
      "children": [
        TocTreeItem {
          "children": [],
          "collapsibleState": "None",
          "command": {
            "arguments": [
              {
                "$mid": 1,
                "path": "/tmp/fakeworkspace/modules/m00001/index.cnxml",
                "scheme": "file",
              },
            ],
            "command": "vscode.open",
            "title": "open",
          },
          "description": "m00001",
          "iconPath": "File",
          "label": "Module1",
          "parent": [Circular],
        },
        TocTreeItem {
          "children": [],
          "collapsibleState": "None",
          "command": {
            "arguments": [
              {
                "$mid": 1,
                "path": "/tmp/fakeworkspace/modules/m00002/index.cnxml",
                "scheme": "file",
              },
            ],
            "command": "vscode.open",
            "title": "open",
          },
          "description": "m00002",
          "iconPath": "File",
          "label": "Module2",
          "parent": [Circular],
        },
      ],
      "collapsibleState": "Collapsed",
      "command": undefined,
      "description": undefined,
      "iconPath": "Folder",
      "label": "subbook",
      "parent": [Circular],
    },
  ],
  "collapsibleState": "Collapsed",
  "command": {
    "arguments": [
      {
        "$mid": 1,
        "path": "/tmp/fakeworkspace/collections/slug1.collection.xml",
        "scheme": "file",
      },
    ],
    "command": "vscode.open",
    "title": "open",
  },
  "description": undefined,
  "iconPath": ThemeIcon {},
  "label": "Book1",
  "parent": undefined,
}
`;

exports[`Toc Editor TocTreesProvider returns expected TocTreeItems 4`] = `
[
  TocTreeItem {
    "children": [],
    "collapsibleState": "None",
    "command": {
      "arguments": [
        {
          "$mid": 1,
          "path": "/tmp/fakeworkspace/modules/m00003/index.cnxml",
          "scheme": "file",
        },
      ],
      "command": "vscode.open",
      "title": "open",
    },
    "description": "m00003",
    "iconPath": "File",
    "label": "Module3",
    "parent": TocTreeItem {
      "children": [Circular],
      "collapsibleState": "Collapsed",
      "command": {
        "arguments": [
          {
            "$mid": 1,
            "path": "/tmp/fakeworkspace/collections/slug2.collection.xml",
            "scheme": "file",
          },
        ],
        "command": "vscode.open",
        "title": "open",
      },
      "description": undefined,
      "iconPath": ThemeIcon {},
      "label": "Book2",
      "parent": undefined,
    },
  },
]
`;

exports[`Toc Editor TocTreesProvider returns expected TocTreeItems 5`] = `
TocTreeItem {
  "children": [
    TocTreeItem {
      "children": [],
      "collapsibleState": "None",
      "command": {
        "arguments": [
          {
            "$mid": 1,
            "path": "/tmp/fakeworkspace/modules/m00003/index.cnxml",
            "scheme": "file",
          },
        ],
        "command": "vscode.open",
        "title": "open",
      },
      "description": "m00003",
      "iconPath": "File",
      "label": "Module3",
      "parent": [Circular],
    },
  ],
  "collapsibleState": "Collapsed",
  "command": {
    "arguments": [
      {
        "$mid": 1,
        "path": "/tmp/fakeworkspace/collections/slug2.collection.xml",
        "scheme": "file",
      },
    ],
    "command": "vscode.open",
    "title": "open",
  },
  "description": undefined,
  "iconPath": ThemeIcon {},
  "label": "Book2",
  "parent": undefined,
}
`;

exports[`Toc Editor TocTreesProvider returns expected TocTreeItems 6`] = `undefined`;

exports[`Toc Editor TocTreesProvider returns expected TocTreeItems 7`] = `
TocTreeItem {
  "children": [
    TocTreeItem {
      "children": [],
      "collapsibleState": "None",
      "command": {
        "arguments": [
          {
            "$mid": 1,
            "path": "/tmp/fakeworkspace/modules/m00003/index.cnxml",
            "scheme": "file",
          },
        ],
        "command": "vscode.open",
        "title": "open",
      },
      "description": "m00003",
      "iconPath": "File",
      "label": "Module3",
      "parent": [Circular],
    },
  ],
  "collapsibleState": "Collapsed",
  "command": {
    "arguments": [
      {
        "$mid": 1,
        "path": "/tmp/fakeworkspace/collections/slug2.collection.xml",
        "scheme": "file",
      },
    ],
    "command": "vscode.open",
    "title": "open",
  },
  "description": undefined,
  "iconPath": ThemeIcon {},
  "label": "Book2",
  "parent": undefined,
}
`;

exports[`Toc Editor TocTreesProvider returns expected TocTreeItems 8`] = `
TocTreeItem {
  "children": [
    TocTreeItem {
      "children": [],
      "collapsibleState": "None",
      "command": {
        "arguments": [
          {
            "$mid": 1,
            "path": "/tmp/fakeworkspace/modules/m00001/index.cnxml",
            "scheme": "file",
          },
        ],
        "command": "vscode.open",
        "title": "open",
      },
      "description": "m00001",
      "iconPath": "File",
      "label": "Module1",
      "parent": [Circular],
    },
    TocTreeItem {
      "children": [],
      "collapsibleState": "None",
      "command": {
        "arguments": [
          {
            "$mid": 1,
            "path": "/tmp/fakeworkspace/modules/m00002/index.cnxml",
            "scheme": "file",
          },
        ],
        "command": "vscode.open",
        "title": "open",
      },
      "description": "m00002",
      "iconPath": "File",
      "label": "Module2",
      "parent": [Circular],
    },
  ],
  "collapsibleState": "Collapsed",
  "command": undefined,
  "description": undefined,
  "iconPath": "Folder",
  "label": "subbook",
  "parent": TocTreeItem {
    "children": [
      [Circular],
    ],
    "collapsibleState": "Collapsed",
    "command": {
      "arguments": [
        {
          "$mid": 1,
          "path": "/tmp/fakeworkspace/collections/slug1.collection.xml",
          "scheme": "file",
        },
      ],
      "command": "vscode.open",
      "title": "open",
    },
    "description": undefined,
    "iconPath": ThemeIcon {},
    "label": "Book1",
    "parent": undefined,
  },
}
`;

exports[`Toc Editor TocTreesProvider returns expected TocTreeItems 9`] = `
TocTreeItem {
  "children": [],
  "collapsibleState": "None",
  "command": {
    "arguments": [
      {
        "$mid": 1,
        "path": "/tmp/fakeworkspace/modules/m00003/index.cnxml",
        "scheme": "file",
      },
    ],
    "command": "vscode.open",
    "title": "open",
  },
  "description": undefined,
  "iconPath": "File",
  "label": "Module3 (m00003)",
  "parent": undefined,
}
`;

exports[`Toc Editor filtering toggleTocTreesFilteringHandler 1`] = `
[
  [
    {
      "children": [],
      "label": "m1",
    },
    {
      "expand": 3,
    },
  ],
  [
    {
      "children": [],
      "label": "m2",
      "type": "TocNodeKind.Page",
    },
    {
      "expand": 3,
    },
  ],
]
`;
